@@ -3,10 +3,11 @@ Requires:
 -
 New features:
 ~~~~~~~~~~~~~
--
+- New directory type LocalDirectory, is used to redirect directory queries to
+  a directory located in the users home folder.
 Bug fixes:
 ~~~~~~~~~~
 -
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
--
+- BaseDirectories __init__ now sets properties with the passed kw dictionary.
